--- a/First Responsive Website/style.css
+++ b/First Responsive Website/style.css
@@ -17,7 +17,6 @@ header{
     border-bottom: 1px solid rgb(235, 182, 114);
     height: 100px;
     width: 100%;
-    /* flex-wrap: wrap; */
 }
 
 header::before{
@@ -57,7 +56,6 @@ header::before{
     margin: 3px 20px;
     padding: 2px 6px;
     font-size: 1.2rem;
-    /* border: 1px solid green; */
     border-radius: 8px;
     transition: all .3s;
 }
@@ -69,15 +67,6 @@ header::before{
     font-size: 1.3rem;
     z-index: 10;
 }
-
-/* #logo{
-    background-color: aquamarine;
-}
-
-#logo img{
-    height: 60px;
-    margin: 3px 6px;
-} */
 
 #bars{
     display: none;
@@ -91,8 +80,6 @@ header::before{
     align-items:flex-start;
     padding-top: 30px;
     margin: 0px 15px;
-    /* min-height: 100vh; */
-    /*background: black; */
 }
 
 .cube{
@@ -115,8 +102,6 @@ header::before{
 }
 .cube div{
     position: absolute;
-    /* top: 0;
-    left: 0; */
     width: 100%;
     height: 100%;
     transform-style: preserve-3d;
@@ -198,7 +183,6 @@ span{
 .btn{
     width: 75px;
     height: 28px;
-    /* margin-top: 14px; */
     margin-right: 51px;
     border: none;
     background: tomato;
@@ -224,7 +208,7 @@ span{
 #home::before{
     content: "";
     position: absolute;
-    background: url('../header.jpg') no-repeat center center/cover;
+    background: url('../Photos/header.jpg') no-repeat center center/cover;
     height: 400px;
     width: 101%;
     z-index: -2;
@@ -248,7 +232,6 @@ span{
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 0px;
-    /* background-color: grey; */
 }
 
 
@@ -293,7 +276,6 @@ span{
 
 .brands{
     display: flex;
-    /* align-items: center; */
     justify-content: center;
     flex-wrap: wrap;
 }
@@ -319,7 +301,7 @@ span{
 #aboutUs::before{
     content: "";
     position: absolute;
-    background: url('../shop.jpg') no-repeat center center/cover;
+    background: url('../Photos/shop.jpg') no-repeat center center/cover;
     opacity: 0.5;
     height: 500px;
     width: 100%;
