--- a/style.css
+++ b/style.css
@@ -205,11 +205,9 @@ span{
     z-index: -1;
 }
 
-#home::before{
+#home{
     content: "";
-    position: absolute;
     background: url('../brand_logo/Photos/header.png') no-repeat center center/cover;
-    height: 400px;
     width: 101%;
     z-index: -2;
     top: 100px;
