--- a/style.css
+++ b/style.css
@@ -205,9 +205,11 @@ span{
     z-index: -1;
 }
 
-#home{
+#home::before{
     content: "";
-    background: url('../brand_logo/Photos/header.png') no-repeat center center/cover;
+    position: absolute;
+    background: url('./brand_logo/Photos/header.png') no-repeat center center/cover;
+    height: 400px;
     width: 101%;
     z-index: -2;
     top: 100px;
@@ -299,7 +301,7 @@ span{
 #aboutUs::before{
     content: "";
     position: absolute;
-    background: url('../brand_logo/Photos/shop.png') no-repeat center center/cover;
+    background: url('./brand_logo/Photos/shop.png') no-repeat center center/cover;
     opacity: 0.5;
     height: 500px;
     width: 100%;
